# sandbox

./: 1.txt  2.txt  a.out  dci-tdd_w34.plantuml  dci00_5290.m  dci_n1.plantuml  fftw  fftw.c  nr_dl_slots_tti_5290.i16.pcm  remove_hist_git.py  rxdata.c  sequence.plantuml  slot5.c  structures.c  waveformIm.txt  waveformRe.txt
amp_div4/: rxdata_symb0.m  rxdata_symb1.m  rxdata_symb10.m  rxdata_symb11.m  rxdata_symb12.m  rxdata_symb13.m  rxdata_symb2.m  rxdata_symb3.m  rxdata_symb4.m  rxdata_symb5.m  rxdata_symb6.m  rxdata_symb7.m  rxdata_symb8.m  rxdata_symb9.m
asn/: M.asn1  a.out  m2.asn1  main.c
comp/: bintodec  bintodec.c  rxdataF_comp  rxdataF_comp.c
complex/: Makefile  Makefile0  Makefile1  a.out  functions.c  functions.h  main  main.c  min_recurse.c
dft/: rxdataF_symb0_fftw.m  rxdataF_symb0_oai.m  rxdataF_symb0_rot_oai.m  rxdataF_symb10_oai.m  rxdataF_symb10_rot_oai.m  rxdataF_symb11_oai.m  rxdataF_symb11_rot_oai.m  rxdataF_symb12_oai.m  rxdataF_symb12_rot_oai.m  rxdataF_symb13_oai.m  rxdataF_symb13_rot_oai.m  rxdataF_symb1_fftw.m  rxdataF_symb1_oai.m  rxdataF_symb1_rot_oai.m  rxdataF_symb2_fftw.m  rxdataF_symb2_oai.m  rxdataF_symb2_rot_oai.m  rxdataF_symb3_fftw.m  rxdataF_symb3_oai.m  rxdataF_symb3_rot_oai.m  rxdataF_symb4_oai.m  rxdataF_symb4_rot_oai.m  rxdataF_symb5_oai.m  rxdataF_symb5_rot_oai.m  rxdataF_symb6_oai.m  rxdataF_symb6_rot_oai.m  rxdataF_symb7_oai.m  rxdataF_symb7_rot_oai.m  rxdataF_symb8_oai.m  rxdataF_symb8_rot_oai.m  rxdataF_symb9_oai.m  rxdata_symb0.m  (+14 more)
mac/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  defs.h  main  main.c
(+3619 files in other folders)
